# claude-code-tool-manager

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KNOWN_BUGS.md  README.md  RENAME_REPO.md  ROADMAP.md  SUGGESTED_FEATURES.md  opencode.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release.yml  rust-tests.yml  update-homebrew.yml  version-sync.yml
.opencode/agent/: code-reviewer.md  comic-vault-processing.md
.opencode/command/: coverage.md  feature.md
docs/: FEATURE_ROADMAP.md
e2e/: navigation.spec.ts
e2e/fixtures/: app.ts  tauri-mock.ts
e2e/mcp/: form.spec.ts  library.spec.ts
e2e/projects/: list.spec.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent_memory.rs  analytics.rs  claude_json.rs  claude_settings.rs  cloud_sync.rs  commands.rs  config.rs  containers.rs  debug.rs  docker_hosts.rs  hooks.rs  insights.rs  keybindings.rs  managed_settings.rs  mcp.rs  mcp_gateway.rs  mcp_registry.rs  mcp_server.rs  mcp_session.rs  mcp_test.rs  memory.rs  mod.rs  permissions.rs  profiles.rs  projects.rs  repos.rs  rules.rs  scanner.rs  sessions.rs  settings.rs  skills.rs  sounds.rs  spinner_verbs.rs  statusline.rs  subagents.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/mcp_gateway/: backend.rs  mod.rs  server.rs  tools.rs
src-tauri/src/mcp_server/: mod.rs  server.rs  tools.rs
src-tauri/src/services/: agent_memory_writer.rs  claude_json.rs  claude_settings.rs  codex_config.rs  command_writer.rs  config_parser.rs  config_writer.rs  copilot_config.rs  cursor_config.rs  debug_logger.rs  gemini_config.rs  gist_sync.rs  github_client.rs  hook_writer.rs  insights.rs  keybindings_writer.rs  managed_settings.rs  mcp_client.rs  mcp_registry.rs  mcp_session.rs  memory_writer.rs  mod.rs  opencode_config.rs  permission_writer.rs  repo_parser.rs  repo_sync.rs  rule_writer.rs  scanner.rs  session_explorer.rs  skill_writer.rs  sound_player.rs  spinner_verb_writer.rs  stats_cache.rs  statusline_gallery.rs  statusline_writer.rs  subagent_writer.rs  wsl_config.rs
src-tauri/src/services/docker/: client.rs  devcontainer.rs  mod.rs  templates.rs
src-tauri/src/services/editor/: mod.rs  registry.rs
src-tauri/src/services/editor/adapters/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs
src-tauri/src/services/snapshots/: claude_code_tool_manager__services__config_writer__tests__generate_mcp_config_empty.snap  claude_code_tool_manager__services__config_writer__tests__generate_mcp_config_http_with_headers.snap  claude_code_tool_manager__services__config_writer__tests__generate_mcp_config_sse.snap  claude_code_tool_manager__services__config_writer__tests__generate_mcp_config_stdio.snap  claude_code_tool_manager__services__config_writer__tests__generate_mcp_config_stdio_minimal.snap
src-tauri/src/utils/: backup.rs  codex_paths.rs  copilot_paths.rs  cursor_paths.rs  gemini_paths.rs  mod.rs  opencode_paths.rs  paths.rs  wsl.rs
src/lib/: index.ts
src/lib/i18n/: i18n.svelte.ts  index.ts  types.ts
src/lib/stores/: agentMemoryLibrary.svelte.ts  claudeJson.svelte.ts  claudeSettingsLibrary.svelte.ts  cloudSyncStore.svelte.ts  commandLibrary.svelte.ts  comparisonStore.svelte.ts  containerLibrary.svelte.ts  dragDrop.svelte.ts  hookLibrary.svelte.ts  index.ts  insightsStore.svelte.ts  keybindingsLibrary.svelte.ts  mcpLibrary.svelte.ts  memoryLibrary.svelte.ts  notifications.svelte.ts  onboarding.svelte.ts  permissionLibrary.svelte.ts  profileLibrary.svelte.ts  projects.svelte.ts  repoLibrary.svelte.ts  ruleLibrary.svelte.ts  sessionStore.svelte.ts  skillLibrary.svelte.ts  soundLibrary.svelte.ts  spinnerVerbLibrary.svelte.ts  statuslineLibrary.svelte.ts  subagentLibrary.svelte.ts  updater.svelte.ts  usageStore.svelte.ts
src/lib/types/: agentMemory.ts  claudeSettings.ts  cloudSync.ts  command.ts  container.ts  gateway.ts  hook.ts  index.ts  insights.ts  keybindings.ts  mcp.ts  memory.ts  permission.ts  profile.ts  project.ts  repo.ts  rule.ts  session.ts  skill.ts  sound.ts  spinnerVerb.ts  statusline.ts  subagent.ts  usage.ts
src/lib/utils/: markdownParser.ts  mcpPasteParser.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/analytics/: +page.svelte
src/routes/commands/: +page.svelte
src/routes/comparison/: +page.svelte
src/routes/containers/: +page.svelte
src/routes/env-vars/: +page.svelte
src/routes/hooks/: +page.svelte
src/routes/insights/: +page.svelte
src/routes/marketplace/: +page.svelte
src/routes/memory/: +page.svelte
src/routes/models-output/: +page.svelte
src/routes/permissions/: +page.svelte
src/routes/plugins/: +page.svelte
src/routes/profiles/: +page.svelte
src/routes/projects/: +page.svelte
src/routes/rules/: +page.svelte
src/routes/sandbox/: +page.svelte
src/routes/sessions/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/skills/: +page.svelte
src/routes/spinnerverbs/: +page.svelte
src/routes/statusline/: +page.svelte
src/routes/subagents/: +page.svelte
src/routes/ui-toggles/: +page.svelte
src/tests/: setup.ts
src/tests/components/: ComponentExports.test.ts.skip  ConfirmDialog.test.ts  EnvEditor.test.ts  McpForm.test.ts  ProjectDetail.test.ts  SearchBar.test.ts  admin-settings.test.ts  analytics.test.ts  auth-helpers.test.ts  auto-mode.test.ts  claude-settings.test.ts  claude.test.ts  cli-flags.test.ts  commands.test.ts  comparison.test.ts  containers.test.ts  env-vars.test.ts  file-suggestion.test.ts  global.test.ts  hooks.test.ts  keybindings.test.ts  layout.test.ts  mcp-approval.test.ts  mcp.test.ts  memory.test.ts  model-overrides.test.ts  onboarding.test.ts  permissions.test.ts  plugins.test.ts  profiles.test.ts  projects.test.ts  sandbox.test.ts  session-cleanup.test.ts  (+10 more)
(+271 files in other folders)
