[package]
name = "claude-code-tool-manager"
version = "1.3.6"
description = "Desktop app to manage MCP servers, Skills, and Sub-Agents for Claude Code"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"
fern = "0.7"

# Path handling
directories = "6"
walkdir = "2"

# SQLite
rusqlite = { version = "0.37", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for GitHub API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# Markdown parsing for README-based repos
pulldown-cmark = "0.12"

# Base64 decoding for GitHub API responses
base64 = "0.22"

# Regex for parsing
regex = "1"

# URL encoding for API queries
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.9.0"
